# PaperTrail

api/: .gitignore  pyproject.toml  test.db
api/app/: main.py  routers.py  services.py  settings.py
api/app/auth/: router.py  schema.py  services.py
api/app/core/: config.py  database.py  dependencies.py  exceptions.py  logging.py  security.py
api/app/documents/: models.py  router.py  services.py
api/app/shared/: utils.py
