[project]
name = "papertrail"
version = "0.1.0"
description = "Smart Document Q&A API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.0.20",
    "fastapi>=0.116.1",
    "langchain-community>=0.3.29",
    "langchain-openai>=0.3.32",
    "passlib>=1.7.4",
    "pydantic-settings>=2.10.1",
    "pyjwt>=2.10.1",
    "pypdf>=6.0.0",
    "python-multipart>=0.0.20",
    "sentence-transformers>=5.1.0",
    "sqlalchemy>=2.0.43",
    "uvicorn>=0.35.0",
]
