[project]
name = "papertrail"
version = "0.1.0"
description = "Smart Document Q&A API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "langchain-chroma>=0.2.5",
    "langchain-community>=0.3.29",
    "langchain-huggingface>=0.3.1",
    "langchain-openai>=0.3.32",
    "langchain-unstructured>=0.1.5",
    "passlib>=1.7.4",
    "pydantic-settings>=2.10.1",
    "pyjwt>=2.10.1",
    "python-multipart>=0.0.20",
    "sentence-transformers>=5.1.0",
    "sqlalchemy>=2.0.43",
    "unstructured[all-docs]>=0.18.14",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = []
